# AIGC_in_Games

./: .gitignore  README.md  pyproject.toml
docs/: .readthedocs.yaml
docs/source/: conf.py  contents.rst  index.rst
docs/source/_static/: custom.css
docs/source/contents/: draft.rst  main.rst  test.rst
docs/source/contents/AIGC/: index.rst
docs/source/contents/AIGC/gpt/: index.rst
docs/source/contents/AIGC/stable_diffusion/: contrl_net.rst  index.rst  theory.rst  webui.rst
docs/source/contents/AIGC/stable_diffusion/extensions/: index.rst
docs/source/contents/AIGC/stable_diffusion/webui/: index.rst  installation.rst  language.rst
docs/source/contents/ai_basic/: concept.md  concept.rst  index.rst  machine_learning.rst  optimization_theory.md  optimization_theory.rst  simple_guide_for_beginner.rst  terms.md
docs/source/contents/gpt/: ChatGPT.rst  GPT.rst  fine_tuning.rst  hyperparameter.rst  index.rst  transformers.rst
docs/source/contents/gpt/chatgpt/: index.rst
docs/source/contents/gpt/chatgpt/opensource/: BELLE.rst  alpaca.rst  alpaca_lora.rst  chatglm_6b.rst  dolly.rst  gpt4all.rst  (+2 more)
docs/source/contents/math/: index.rst
docs/source/contents/stable_diffusion/: control_net.rst  index.rst  lora.rst  theory.rst
docs/source/contents/stable_diffusion/control_net/: index.rst  model_train.rst  theory.rst  user_guide.rst
docs/source/contents/stable_diffusion/lora/: index.rst  lora_theory.rst  model_train.rst
docs/source/contents/stable_diffusion/webui/: index.rst  installation.rst  installation_ubuntu.rst  language.rst
read_notes/: image.ipynb
(+21 files in other folders)
