[tool.poetry]
name = "read-notes"
version = "0.1.0"
description = ""
authors = ["Xiaomin Wu <243399634@qq.com>"]
readme = "README.md"
packages = [{include = "read_notes"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
