[tool.poetry]
name = "AIGC_in_Games"
version = "0.1.0"
description = "AI Application in Games"
authors = ["Xiaomin Wu <xmwu@mail.ustc.edu.cn>"]
readme = "README.md"
packages = [{include = "read_notes"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
